# curotec

./: README.md  docker-compose.yaml  main.py  pyproject.toml
docker-entrypoint-initdb.d/: postgres-init.sql
src/adapters/controllers/: commodity_controller.py  order_controller.py
src/adapters/extensions/commodities/: get_commodity_by_name_extension.py
src/adapters/extensions/orders/: execute_order_extension.py  order_extension.py
src/adapters/extensions/services/: commodities_service_extension.py
src/adapters/ports/controllers/: i_commodity_controller.py  i_order_controller.py
src/adapters/ports/postgresql/: i_postgresql_infrastructure.py
src/adapters/repositories/postgresql/: order_repository.py
src/domain/entities/: order_entity.py
src/domain/enums/: commodity_name_enum.py
src/domain/exceptions/: entity_exceptions.py  entity_exceptions_reasons_enum.py
src/domain/models/: order_model.py
src/use_cases/commodities/: get_commodity_by_name_use_case.py
src/use_cases/data_types/dtos/commodities/: get_commodity_by_name_dto.py
src/use_cases/data_types/dtos/orders/: order_dto.py
src/use_cases/data_types/requests/commodities/: get_commodity_by_name_request.py
src/use_cases/data_types/requests/orders/: execute_order_request.py
src/use_cases/data_types/responses/commodities/: get_commodity_by_name_response.py
src/use_cases/exceptions/: use_case_exceptions.py  use_case_exceptions_reasons_enum.py
src/use_cases/orders/: execute_order_use_case.py
src/use_cases/ports/services/: i_commodities_service.py
(+12 files in other folders)
